--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
   </button>
   <!-- Image container -->
   <div id="image-container" class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 hidden">
-    <img src="/images/1.jpg" alt="Image 1" class="w-full rounded-lg shadow-lg">
-    <img src="/images/2.jpg" alt="Image 2" class="w-full rounded-lg shadow-lg">
-    <img src="/images/3.jpg" alt="Image 3" class="w-full rounded-lg shadow-lg">
-    <img src="/images/4.jpg" alt="Image 4" class="w-full rounded-lg shadow-lg">
-    <img src="/images/5.jpg" alt="Image 5" class="w-full rounded-lg shadow-lg">
-    <img src="/images/6.jpg" alt="Image 6" class="w-full rounded-lg shadow-lg">
-    <img src="/images/7.jpg" alt="Image 7" class="w-full rounded-lg shadow-lg">
-    <img src="/images/8.jpg" alt="Image 8" class="w-full rounded-lg shadow-lg">
+    <img src="images/1.jpg" alt="Image 1" class="w-full rounded-lg shadow-lg">
+    <img src="images/2.jpg" alt="Image 2" class="w-full rounded-lg shadow-lg">
+    <img src="images/3.jpg" alt="Image 3" class="w-full rounded-lg shadow-lg">
+    <img src="images/4.jpg" alt="Image 4" class="w-full rounded-lg shadow-lg">
+    <img src="images/5.jpg" alt="Image 5" class="w-full rounded-lg shadow-lg">
+    <img src="images/6.jpg" alt="Image 6" class="w-full rounded-lg shadow-lg">
+    <img src="images/7.jpg" alt="Image 7" class="w-full rounded-lg shadow-lg">
+    <img src="images/8.jpg" alt="Image 8" class="w-full rounded-lg shadow-lg">
   </div>
   <!-- Audio Element -->
   <audio id="birthday-song" src="/01.Allem_Alby.mp3"></audio>
