--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <img src="images/8.jpg" alt="Image 8" class="w-full rounded-lg shadow-lg">
   </div>
   <!-- Audio Element -->
-  <audio id="birthday-song" src="/01.Allem_Alby.mp3"></audio>
+  <audio id="birthday-song" src="01.Allem_Alby.mp3"></audio>
   <script src="script.js"></script>
 </body>
 </html>
